Bug 117503 - FILESAVE: DOC: Incorrect page break added after RT
Summary: FILESAVE: DOC: Incorrect page break added after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords: bibisected, bisected, regression
: 128765 (view as bug list)
Depends on:
Blocks: Writer-Page-Break DOC-Page
  Show dependency treegraph
 
Reported: 2018-05-08 15:11 UTC by Xisco Faulí
Modified: 2020-10-25 11:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
output file after RT (46.00 KB, application/msword)
2018-05-08 16:24 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-05-08 15:11:09 UTC
Steps to reproduce:
1. Open attachment 80056 [details] from bug 65187
2. Save it as DOC
3. Open the new file

-> Observed behaviour: 2 page is almost empty, having a page break before the bullets list

Reproduced in

Version: 6.1.0.0.alpha1+
Build ID: 1e2afc9bd3062cfba6b65b45c17a08f298014239
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-05-08 15:12:23 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-02-19 22:37:58 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-02-20 08:11:57 +0100
commit a16275a3647a2fba9913ed23e8329e45b02123b4 (patch)
tree fd02655cd83c0bf92e0c255031b6c4b456236208
parent 19a906f09688f06ee90cac2a50126aeba749a331 (diff)
tdf#112694 DOCX import: handle <w:titlePg> when turning on follow style header

Bisected with: bibisect-linux64-6.1

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2018-05-08 15:16:10 UTC
I don't reproduce it when I export it to DOCX
Comment 3 Xisco Faulí 2018-05-08 15:20:28 UTC
Same behaviour reproduced also with attachment 89461 [details] from bug 71784
Comment 4 Miklos Vajna 2018-05-08 16:06:11 UTC
Hi,

I can't reproduce the problem with the first document. I can reproduce a problem with the second one, but that seems to be a DOC export problem (Word says the table is corrupted in the export result). It's rare that a DOCX import change affects the result of DOC export + DOC open.

Could you please confirm that git bisect points out the above commit also for the second problem?

Thanks!
Comment 5 Xisco Faulí 2018-05-08 16:24:54 UTC
Created attachment 141980 [details]
output file after RT
Comment 6 Xisco Faulí 2018-05-08 16:34:20 UTC
According the b(In reply to Miklos Vajna from comment #4)
> Hi,
> 
> I can't reproduce the problem with the first document. I can reproduce a
> problem with the second one, but that seems to be a DOC export problem (Word
> says the table is corrupted in the export result). It's rare that a DOCX
> import change affects the result of DOC export + DOC open.
> 
> Could you please confirm that git bisect points out the above commit also
> for the second problem?
> 
> Thanks!

Yep, I do confirm the commit mentioned above makes the document to have a page break on the second page, which is the same problem as in the second document. I've attached the output document generated
Comment 7 Miklos Vajna 2018-05-08 16:47:55 UTC
OK, thanks. I'll need to investigate that later, it's pretty strange. :-)
Comment 8 Commit Notification 2018-05-29 07:05:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b7ae863efeb082816cc4fe660527a9650d90e186

tdf#117503 DOCX import: fix out of sync first/later top margin

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-05-29 14:32:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02a924831933d964cda209897bab27c48803c891&h=libreoffice-6-1

tdf#117503 DOCX import: fix out of sync first/later top margin

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2018-05-31 10:21:02 UTC
Verified in

Version: 6.1.0.0.beta1+
Build ID: 2a0d8106a558845357d39648656e08ec6f091cf8
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Miklos, Thanks for fixing this!!
Comment 11 Alex Thurgood 2019-11-13 11:30:33 UTC
*** Bug 128765 has been marked as a duplicate of this bug. ***