tdf#117503 DOCX import: fix out of sync first/later top margin

Improve the synchronization between the first page and follow page
style, so that when the DOC export invokes
sw::util::IsPlausableSingleWordSection(), it recognizes that originally
these were the same Word section.

If they don't match up, then the exporter will insert an explicit
section break, meaning we get one more page in the export result
compared to the original.

(cherry picked from commit b7ae863efeb082816cc4fe660527a9650d90e186)

Change-Id: I336cf347698187cdede47be2659cec51e4381e85
Reviewed-on: https://gerrit.libreoffice.org/54988
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>